welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: ';' expected but 'return' found.
} return vuBiscuit} 
  ^